# poetry2nix-template

./: .envrc  .gitignore  devenv.nix  flake.nix  pyproject.toml
app/: __init__.py
